--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,12 @@ jar {
 tasks.withType(org.gradle.api.tasks.bundling.Jar){
   doFirst {
     into( 'build/libs' ) {
-      from { configurations.compile.minus( [configurations.provided] ) }
+//      from { configurations.compile.minus( [configurations.provided] ) }
+       from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
+        exclude "META-INF/*.SF"
+       exclude "META-INF/*.DSA"
+       exclude "META-INF/*.RSA"
+      }
     }
   }
 }
