--- a/src/main/resources/job.properties
+++ b/src/main/resources/job.properties
@@ -5,7 +5,7 @@ examplesRoot=examples
 appName=sampleApp
 oozie.coord.application.path=${nameNode}/app/config
 oozie.use.system.libpath=true
-oozie.libpath=${nameNode}/app
+oozie.libpath=${nameNode}/app/jar
 ce_supplierId=1001
 customerID=1000
 wf_application_path=hdfs://sandbox.hortonworks.com:8020/app/config
