--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -7,7 +7,7 @@ job('MyJob') {
         scm('* * * * *')
     }
     steps {
-        gradle('build')
+        gradle('install')
         publishOverSsh {
             server('10.10.21.184') {
                 label('Sandbox')
