--- a/build.gradle
+++ b/build.gradle
@@ -76,18 +76,25 @@ jar {
     attributes( "Main-Class": "com/nixsolutions/hadoop/facilityavro/Main" )
   }
 }
-tasks.withType(org.gradle.api.tasks.bundling.Jar){
-  doFirst {
-    into( '' ) {
-      from { configurations.compile.minus( [configurations.provided] ) }
-//       from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
-//        exclude "META-INF/*.SF"
-//       exclude "META-INF/*.DSA"
-//       exclude "META-INF/*.RSA"
-//      }
-    }
-  }
+
+task install(type: Copy) {
+  dependsOn build
+  from configurations.runtime
+  into "${project.projectDir}/build/libs"
 }
+
+//tasks.withType(org.gradle.api.tasks.bundling.Jar){
+//  doFirst {
+//    into( '' ) {
+//      from { configurations.compile.minus( [configurations.provided] ) }
+////       from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
+////        exclude "META-INF/*.SF"
+////       exclude "META-INF/*.DSA"
+////       exclude "META-INF/*.RSA"
+////      }
+//    }
+//  }
+//}
 
 tasks.withType(Checkstyle) {
   reports {
