--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -37,10 +37,8 @@ job('MyJob') {
            command('hdfs dfs -mkdir /app/jar')
            command('hdfs dfs -put build/libs/**.jar /app/jar/')
            command('hdfs dfs -put build/config/**.xml /app/config/')
-           command('oozie job -oozie http://10.10.21.184:11000/oozie -config build/libs/job.properties -run')
-//           command('rm -rf build')
-
-
+           command('oozie job -oozie http://10.10.21.184:11000/oozie -config build/config/job.properties -run')
+           command('rm -rf build')
         }
     }
     publishers {
