--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -30,9 +30,11 @@ job('MyJob') {
         }
 
         remoteShell('root@10.10.21.184:22') {
-           command('hadoop fs -rm -rf /app/config')
-           command('hadoop fs -rm -rf /app/jar')
+           command('hadoop fs -rm -f /app')
+           command('hadoop fs -rm -f /app/config')
+           command('hadoop fs -rm -f /app/jar')
 //           command('hadoop fs -rm /app/facility.jar')
+           command('hdfs dfs -mkdir /app')
            command('hdfs dfs -mkdir /app/config')
            command('hdfs dfs -mkdir /app/jar')
            command('hdfs dfs -put build/libs/**.jar /app/jar/')
