--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -38,7 +38,7 @@ job('MyJob') {
            command('hdfs dfs -mkdir /app/config')
            command('hdfs dfs -mkdir /app/jar')
            command('hdfs dfs -put build/libs/**.jar /app/jar/')
-           command('hdfs dfs -put build/config/**.xml /app/config/')
+           command('hdfs dfs -put build/config/**.* /app/config/')
            command('oozie job -oozie http://10.10.21.184:11000/oozie -config build/config/job.properties -run')
            command('rm -rf build')
         }
