--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -9,7 +9,7 @@ job('MyJob') {
     steps {
         gradle('install')
         publishOverSsh {
-            server('${HADOOP_HOST}') {
+            server('$hadoop_value') {
                 label('Sandbox')
                 transferSet {
                     sourceFiles('build/libs/**.jar')
@@ -24,7 +24,7 @@ job('MyJob') {
             }
         }
 
-        remoteShell('root@${HADOOP_HOST}:22') {
+        remoteShell('root@$$hadoop_value:22') {
            command('hadoop fs -rm -f /app')
            command('hadoop fs -rm -f /app/config')
            command('hadoop fs -rm -f /app/jar')
@@ -33,7 +33,7 @@ job('MyJob') {
            command('hdfs dfs -mkdir /app/jar')
            command('hdfs dfs -put build/libs/**.jar /app/jar/')
            command('hdfs dfs -put build/config/**.* /app/config/')
-           command('oozie job -oozie http://${HADOOP_HOST}:11000/oozie -config build/config/job.properties -run')
+           command('oozie job -oozie http://$hadoop_value:11000/oozie -config build/config/job.properties -run')
            command('rm -rf build')
         }
     }
