--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -12,7 +12,7 @@ job('MyJob') {
     steps {
         gradle('install')
         publishOverSsh {
-            server('10.10.21.184') {
+            server('$hadoop_server') {
                 label('Sandbox')
                 transferSet {
                     sourceFiles('build/libs/**.jar')
@@ -27,7 +27,7 @@ job('MyJob') {
             }
         }
 
-        remoteShell('root@10.10.21.184:22') {
+        remoteShell('root@$hadoop_server:22') {
            command('echo $hadoop_server')
 //           command('hadoop fs -rm -f /app')
 //           command('hadoop fs -rm -f /app/config')
