--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,9 @@ ext.cascadingVersion = '3.0.0'
 ext.hadoopVersion = '2.7.3'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-checkstyle.toolVersion = '6.18'
-findbugs.toolVersion = '3.0.1'
-pmd.toolVersion = '5.5.2'
+//checkstyle.toolVersion = '6.18'
+//findbugs.toolVersion = '3.0.1'
+//pmd.toolVersion = '5.5.2'
 
 dependencies {
   compileAvro
