--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.1'
     classpath 'org.apache.maven:maven-artifact:2.2.1' // 3.x won't work
     classpath 'org.apache.avro:avro-compiler:1.7.7'
+    classpath 'org.apache.avro:avro-tools:1.7.7'
     classpath 'org.clojars.miguno:avro-gradle-plugin:1.7.7.2'
     classpath 'org.hidetake:gradle-ssh-plugin:2.7.0'
   }
@@ -29,7 +30,7 @@ apply plugin: 'org.hidetake.ssh'
 archivesBaseName = 'facility'
 
 ext.cascadingVersion = '3.0.0'
-ext.hadoopVersion = '2.7.3'
+ext.hadoopVersion = '2.6.0'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 //checkstyle.toolVersion = '6.18'
@@ -59,11 +60,18 @@ dependencies {
   compile( group: 'cascading', name: 'cascading-local', version: cascadingVersion )
   compile( group: 'cascading', name: 'cascading-hadoop2-mr1', version: cascadingVersion )
   compile( group: 'cascading', name: 'cascading-hadoop', version: cascadingVersion )
-  compile 'org.mongodb:mongo-java-driver:3.2.2'
+  compile( group: 'org.apache.avro', name: 'avro', version: '1.7.7')
+  compile( group: 'org.apache.avro', name: 'avro-tools', version: '1.7.7')
+  compile('org.mongodb:mongo-java-driver:3.2.2')
+
+
 
   provided( group: 'org.apache.hadoop', name: 'hadoop-common', version: hadoopVersion )
+          {exclude module: 'avro'}
   provided( group: 'org.apache.hadoop', name: 'hadoop-client', version: hadoopVersion )
+          {exclude module: 'avro'}
   provided( group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: hadoopVersion )
+          {exclude module: 'avro'}
 }
 
 jar {
